src/net/johnboehr/netbeans/handlebars/grammar/HbsParser.java
// Generated from C:\Users\Rin\Documents\GitHub\NetbeansHandlebars\src\net\johnboehr\netbeans\handlebars\grammar\HbsParser.g4 by ANTLR 4.3
package net.johnboehr.netbeans.handlebars.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HbsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PATH=18, LP=29, UNLESS=6, TEXT=2, WS_DELIM=16, START_PARTIAL=9, COMMENT=3, 
		INT=25, SPACE=12, ESC_VAR=1, DELIM=17, START_DELIM=8, ELSE=27, WS=31, 
		START_BLOCK=7, END_T=20, START_T=5, SINGLE_STRING=23, START_AMP=4, ERR_CHAR=14, 
		DOUBLE_STRING=22, WS_PATH=19, EQ=24, QID=28, BOOLEAN=26, START=11, END=21, 
		END_DELIM=15, END_BLOCK=10, NL=13, RP=30;
	public static final String[] tokenNames = {
		"<INVALID>", "ESC_VAR", "TEXT", "COMMENT", "START_AMP", "START_T", "UNLESS", 
		"START_BLOCK", "START_DELIM", "START_PARTIAL", "END_BLOCK", "START", "SPACE", 
		"NL", "ERR_CHAR", "END_DELIM", "WS_DELIM", "DELIM", "PATH", "WS_PATH", 
		"END_T", "END", "DOUBLE_STRING", "SINGLE_STRING", "'='", "INT", "BOOLEAN", 
		"ELSE", "QID", "'('", "')'", "WS"
	};
	public static final int
		RULE_template = 0, RULE_body = 1, RULE_statement = 2, RULE_escape = 3, 
		RULE_text = 4, RULE_spaces = 5, RULE_newline = 6, RULE_block = 7, RULE_sexpr = 8, 
		RULE_elseBlock = 9, RULE_unless = 10, RULE_tvar = 11, RULE_ampvar = 12, 
		RULE_var = 13, RULE_delimiters = 14, RULE_partial = 15, RULE_param = 16, 
		RULE_hash = 17, RULE_hashValue = 18, RULE_comment = 19;
	public static final String[] ruleNames = {
		"template", "body", "statement", "escape", "text", "spaces", "newline", 
		"block", "sexpr", "elseBlock", "unless", "tvar", "ampvar", "var", "delimiters", 
		"partial", "param", "hash", "hashValue", "comment"
	};

	@Override
	public String getGrammarFileName() { return "HbsParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  void setStart(String start) {
	  }

	  void setEnd(String end) {
	  }

	  private String join(List<Token> tokens) {
	    StringBuilder text = new StringBuilder();
	    for(Token token: tokens) {
	      text.append(token.getText());
	    }
	    return text.toString();
	  }

	public HbsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TemplateContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HbsParser.EOF, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterTemplate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitTemplate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitTemplate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); body();
			setState(41); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_body);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(43); statement();
					}
					} 
				}
				setState(48);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public TvarContext tvar() {
			return getRuleContext(TvarContext.class,0);
		}
		public EscapeContext escape() {
			return getRuleContext(EscapeContext.class,0);
		}
		public SpacesContext spaces() {
			return getRuleContext(SpacesContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public AmpvarContext ampvar() {
			return getRuleContext(AmpvarContext.class,0);
		}
		public NewlineContext newline() {
			return getRuleContext(NewlineContext.class,0);
		}
		public PartialContext partial() {
			return getRuleContext(PartialContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public DelimitersContext delimiters() {
			return getRuleContext(DelimitersContext.class,0);
		}
		public UnlessContext unless() {
			return getRuleContext(UnlessContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(61);
			switch (_input.LA(1)) {
			case SPACE:
				enterOuterAlt(_localctx, 1);
				{
				setState(49); spaces();
				}
				break;
			case NL:
				enterOuterAlt(_localctx, 2);
				{
				setState(50); newline();
				}
				break;
			case TEXT:
				enterOuterAlt(_localctx, 3);
				{
				setState(51); text();
				}
				break;
			case START_BLOCK:
				enterOuterAlt(_localctx, 4);
				{
				setState(52); block();
				}
				break;
			case START:
				enterOuterAlt(_localctx, 5);
				{
				setState(53); var();
				}
				break;
			case START_T:
				enterOuterAlt(_localctx, 6);
				{
				setState(54); tvar();
				}
				break;
			case START_AMP:
				enterOuterAlt(_localctx, 7);
				{
				setState(55); ampvar();
				}
				break;
			case UNLESS:
				enterOuterAlt(_localctx, 8);
				{
				setState(56); unless();
				}
				break;
			case START_PARTIAL:
				enterOuterAlt(_localctx, 9);
				{
				setState(57); partial();
				}
				break;
			case ESC_VAR:
				enterOuterAlt(_localctx, 10);
				{
				setState(58); escape();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 11);
				{
				setState(59); comment();
				}
				break;
			case START_DELIM:
				enterOuterAlt(_localctx, 12);
				{
				setState(60); delimiters();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EscapeContext extends ParserRuleContext {
		public TerminalNode ESC_VAR() { return getToken(HbsParser.ESC_VAR, 0); }
		public EscapeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escape; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterEscape(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitEscape(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitEscape(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EscapeContext escape() throws RecognitionException {
		EscapeContext _localctx = new EscapeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_escape);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); match(ESC_VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(HbsParser.TEXT, 0); }
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_text);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpacesContext extends ParserRuleContext {
		public TerminalNode SPACE() { return getToken(HbsParser.SPACE, 0); }
		public SpacesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spaces; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterSpaces(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitSpaces(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitSpaces(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpacesContext spaces() throws RecognitionException {
		SpacesContext _localctx = new SpacesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_spaces);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); match(SPACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewlineContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(HbsParser.NL, 0); }
		public NewlineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterNewline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitNewline(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitNewline(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NewlineContext newline() throws RecognitionException {
		NewlineContext _localctx = new NewlineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_newline);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public BodyContext thenBody;
		public Token nameEnd;
		public TerminalNode END(int i) {
			return getToken(HbsParser.END, i);
		}
		public TerminalNode QID() { return getToken(HbsParser.QID, 0); }
		public List<TerminalNode> END() { return getTokens(HbsParser.END); }
		public TerminalNode END_BLOCK() { return getToken(HbsParser.END_BLOCK, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ElseBlockContext elseBlock() {
			return getRuleContext(ElseBlockContext.class,0);
		}
		public TerminalNode START_BLOCK() { return getToken(HbsParser.START_BLOCK, 0); }
		public SexprContext sexpr() {
			return getRuleContext(SexprContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); match(START_BLOCK);
			setState(72); sexpr();
			setState(73); match(END);
			setState(74); ((BlockContext)_localctx).thenBody = body();
			setState(76);
			_la = _input.LA(1);
			if (_la==UNLESS || _la==START) {
				{
				setState(75); elseBlock();
				}
			}

			setState(78); match(END_BLOCK);
			setState(79); ((BlockContext)_localctx).nameEnd = match(QID);
			setState(80); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SexprContext extends ParserRuleContext {
		public List<HashContext> hash() {
			return getRuleContexts(HashContext.class);
		}
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public HashContext hash(int i) {
			return getRuleContext(HashContext.class,i);
		}
		public TerminalNode QID() { return getToken(HbsParser.QID, 0); }
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public SexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterSexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitSexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitSexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SexprContext sexpr() throws RecognitionException {
		SexprContext _localctx = new SexprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sexpr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82); match(QID);
			setState(86);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(83); param(0);
					}
					} 
				}
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==QID || _la==WS) {
				{
				{
				setState(89); hash(0);
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseBlockContext extends ParserRuleContext {
		public Token inverseToken;
		public BodyContext unlessBody;
		public TerminalNode ELSE() { return getToken(HbsParser.ELSE, 0); }
		public TerminalNode END() { return getToken(HbsParser.END, 0); }
		public TerminalNode UNLESS() { return getToken(HbsParser.UNLESS, 0); }
		public TerminalNode START() { return getToken(HbsParser.START, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ElseBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterElseBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitElseBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitElseBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseBlockContext elseBlock() throws RecognitionException {
		ElseBlockContext _localctx = new ElseBlockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_elseBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			switch (_input.LA(1)) {
			case UNLESS:
				{
				setState(95); ((ElseBlockContext)_localctx).inverseToken = match(UNLESS);
				}
				break;
			case START:
				{
				setState(96); match(START);
				setState(97); ((ElseBlockContext)_localctx).inverseToken = match(ELSE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(100); match(END);
			setState(101); ((ElseBlockContext)_localctx).unlessBody = body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnlessContext extends ParserRuleContext {
		public Token nameStart;
		public Token nameEnd;
		public TerminalNode END(int i) {
			return getToken(HbsParser.END, i);
		}
		public List<TerminalNode> QID() { return getTokens(HbsParser.QID); }
		public TerminalNode UNLESS() { return getToken(HbsParser.UNLESS, 0); }
		public List<TerminalNode> END() { return getTokens(HbsParser.END); }
		public TerminalNode END_BLOCK() { return getToken(HbsParser.END_BLOCK, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode QID(int i) {
			return getToken(HbsParser.QID, i);
		}
		public UnlessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unless; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterUnless(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitUnless(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitUnless(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnlessContext unless() throws RecognitionException {
		UnlessContext _localctx = new UnlessContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_unless);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); match(UNLESS);
			setState(104); ((UnlessContext)_localctx).nameStart = match(QID);
			setState(105); match(END);
			setState(106); body();
			setState(107); match(END_BLOCK);
			setState(108); ((UnlessContext)_localctx).nameEnd = match(QID);
			setState(109); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TvarContext extends ParserRuleContext {
		public TerminalNode END_T() { return getToken(HbsParser.END_T, 0); }
		public TerminalNode START_T() { return getToken(HbsParser.START_T, 0); }
		public SexprContext sexpr() {
			return getRuleContext(SexprContext.class,0);
		}
		public TvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tvar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterTvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitTvar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitTvar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TvarContext tvar() throws RecognitionException {
		TvarContext _localctx = new TvarContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_tvar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); match(START_T);
			setState(112); sexpr();
			setState(113); match(END_T);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AmpvarContext extends ParserRuleContext {
		public TerminalNode START_AMP() { return getToken(HbsParser.START_AMP, 0); }
		public TerminalNode END() { return getToken(HbsParser.END, 0); }
		public SexprContext sexpr() {
			return getRuleContext(SexprContext.class,0);
		}
		public AmpvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ampvar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterAmpvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitAmpvar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitAmpvar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AmpvarContext ampvar() throws RecognitionException {
		AmpvarContext _localctx = new AmpvarContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ampvar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(START_AMP);
			setState(116); sexpr();
			setState(117); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode END() { return getToken(HbsParser.END, 0); }
		public TerminalNode START() { return getToken(HbsParser.START, 0); }
		public SexprContext sexpr() {
			return getRuleContext(SexprContext.class,0);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119); match(START);
			setState(120); sexpr();
			setState(121); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DelimitersContext extends ParserRuleContext {
		public Token DELIM;
		public List<Token> startDelim = new ArrayList<Token>();
		public List<Token> endDelim = new ArrayList<Token>();
		public TerminalNode START_DELIM() { return getToken(HbsParser.START_DELIM, 0); }
		public List<TerminalNode> WS_DELIM() { return getTokens(HbsParser.WS_DELIM); }
		public List<TerminalNode> DELIM() { return getTokens(HbsParser.DELIM); }
		public TerminalNode DELIM(int i) {
			return getToken(HbsParser.DELIM, i);
		}
		public TerminalNode END_DELIM() { return getToken(HbsParser.END_DELIM, 0); }
		public TerminalNode WS_DELIM(int i) {
			return getToken(HbsParser.WS_DELIM, i);
		}
		public DelimitersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delimiters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).enterDelimiters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HbsParserListener ) ((HbsParserListener)listener).exitDelimiters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HbsParserVisitor ) return ((HbsParserVisitor<? extends T>)visitor).visitDelimiters(this);
			else return visitor.visitChildren(this);
		}
	}
